<resources>
    <string name="app_name">SedonorTDD</string>
    <string name="artikel_kesehatan">Artikel Kesehatan</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Praesent semper feugiat nibh sed pulvinar proin gravida hendrerit lectus. Et netus et malesuada fames ac turpis egestas integer eget. Eu tincidunt tortor aliquam nulla. Mattis nunc sed blandit libero volutpat sed cras ornare arcu. Ac tortor dignissim convallis aenean et tortor. Eros donec ac odio tempor orci dapibus ultrices in. Rhoncus dolor purus non enim praesent elementum facilisis leo. Cursus eget nunc scelerisque viverra mauris in. Leo vel orci porta non pulvinar neque. Diam maecenas sed enim ut sem. Placerat in egestas erat imperdiet sed euismod nisi porta lorem. Tincidunt nunc pulvinar sapien et ligula ullamcorper. Mattis molestie a iaculis at erat pellentesque adipiscing commodo elit. Lacinia at quis risus sed. Cras ornare arcu dui vivamus arcu felis bibendum. Mollis aliquam ut porttitor leo a diam sollicitudin.
Sed nisi lacus sed viverra tellus in hac. Vitae tortor condimentum lacinia quis. Augue ut lectus arcu bibendum at varius vel pharetra. Curabitur vitae nunc sed velit dignissim sodales ut. Urna nunc id cursus metus aliquam. Nulla facilisi nullam vehicula ipsum a. Nec ullamcorper sit amet risus nullam. Ac orci phasellus egestas tellus rutrum tellus pellentesque. Consequat id porta nibh venenatis cras sed felis eget. Platea dictumst quisque sagittis purus sit. Purus in mollis nunc sed id semper risus. Aliquam malesuada bibendum arcu vitae elementum curabitur vitae nunc sed. Sit amet mauris commodo quis imperdiet massa tincidunt nunc. Velit euismod in pellentesque massa placerat.

Elit scelerisque mauris pellentesque pulvinar pellentesque habitant. Cursus eget nunc scelerisque viverra mauris. Lectus sit amet est placerat. Odio euismod lacinia at quis risus. Leo urna molestie at elementum eu facilisis sed odio. Volutpat lacus laoreet non curabitur gravida. Sed libero enim sed faucibus turpis in eu mi. Sapien et ligula ullamcorper malesuada proin libero nunc. Et malesuada fames ac turpis egestas sed tempus. In iaculis nunc sed augue lacus viverra vitae congue. Justo laoreet sit amet cursus. Amet commodo nulla facilisi nullam vehicula. Ac felis donec et odio pellentesque diam volutpat. Tempor id eu nisl nunc mi ipsum faucibus.

Tellus mauris a diam maecenas sed enim ut sem viverra. In vitae turpis massa sed elementum tempus egestas sed sed. Dictum fusce ut placerat orci nulla pellentesque dignissim. Duis at consectetur lorem donec massa sapien faucibus et. Vestibulum mattis ullamcorper velit sed ullamcorper morbi tincidunt. Ut sem viverra aliquet eget. Sed elementum tempus egestas sed sed risus pretium. Gravida neque convallis a cras semper auctor neque. Ornare aenean euismod elementum nisi quis eleifend. Egestas integer eget aliquet nibh praesent tristique. Pretium viverra suspendisse potenti nullam ac tortor vitae purus. Nec tincidunt praesent semper feugiat nibh sed pulvinar. Scelerisque varius morbi enim nunc faucibus a pellentesque. Mauris a diam maecenas sed enim ut sem viverra. At tempor commodo ullamcorper a lacus vestibulum sed. Purus viverra accumsan in nisl nisi scelerisque eu ultrices. Nulla posuere sollicitudin aliquam ultrices sagittis orci a scelerisque purus. Vitae nunc sed velit dignissim sodales ut eu sem. Massa enim nec dui nunc. Donec enim diam vulputate ut pharetra sit amet aliquam id.

Tempor commodo ullamcorper a lacus vestibulum sed. Lectus sit amet est placerat in. Libero id faucibus nisl tincidunt eget nullam. Consequat id porta nibh venenatis cras sed. Duis at tellus at urna condimentum mattis pellentesque. Sed enim ut sem viverra. Id faucibus nisl tincidunt eget nullam non nisi. Quam nulla porttitor massa id neque aliquam vestibulum. Pharetra et ultrices neque ornare aenean euismod elementum. Nunc mattis enim ut tellus elementum.

In ornare quam viverra orci sagittis eu. Vitae justo eget magna fermentum iaculis eu. Scelerisque eleifend donec pretium vulputate. Amet nisl purus in mollis nunc sed. Non odio euismod lacinia at. Faucibus nisl tincidunt eget nullam non nisi. Adipiscing commodo elit at imperdiet dui accumsan. Lectus urna duis convallis convallis tellus. Pulvinar sapien et ligula ullamcorper malesuada. Egestas pretium aenean pharetra magna ac placerat vestibulum lectus mauris. Diam donec adipiscing tristique risus nec feugiat in fermentum posuere. Placerat duis ultricies lacus sed turpis tincidunt id aliquet. Blandit volutpat maecenas volutpat blandit aliquam etiam erat velit scelerisque. Ut tellus elementum sagittis vitae et leo duis. Libero nunc consequat interdum varius. Nulla facilisi etiam dignissim diam quis. Nunc scelerisque viverra mauris in. Cursus mattis molestie a iaculis at erat pellentesque.

Non curabitur gravida arcu ac tortor dignissim convallis aenean et. Vitae nunc sed velit dignissim sodales ut. Vel facilisis volutpat est velit egestas dui. Nisi vitae suscipit tellus mauris a diam maecenas sed. Elementum nibh tellus molestie nunc non blandit massa enim. Et netus et malesuada fames ac turpis egestas integer. Ullamcorper eget nulla facilisi etiam dignissim. Pretium nibh ipsum consequat nisl vel pretium lectus quam id. Morbi tincidunt ornare massa eget egestas purus viverra accumsan. Et tortor consequat id porta nibh venenatis. Convallis tellus id interdum velit laoreet. Eu tincidunt tortor aliquam nulla. Congue mauris rhoncus aenean vel elit. Nec tincidunt praesent semper feugiat. Nibh sit amet commodo nulla facilisi. Eros in cursus turpis massa tincidunt dui ut." />
</string>
    <string name="back_button">back_button</string>
    <string name="gambar">gambar</string>
    <string name="check_in">Check-In</string>
    <string name="arahkan_kamera_ke_qr_code">Arahkan kamera ke QR Code</string>
    <string name="avatar">avatar</string>
    <string name="lokasi">Lokasi</string>
    <string name="nama">nama</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="submit">Submit</string>
    <string name="tulis_pertanyaan_anda">Tulis pertanyaan Anda...</string>
    <string name="chatbot_tanya_pmi">Chatbot Tanya PMI</string>
</resources>