<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.article.DetailArticleActivity" >

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".artikel.DetailArtikel">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/ibBackArtikel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="21dp"
                android:clickable="true"
                android:contentDescription="@string/back_button"
                android:focusable="true"
                android:onClick="intentKeListArtikel"
                app:backgroundTint="#FFFFFF"
                app:elevation="2dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_back_pink" />

            <TextView
                android:id="@+id/tvJudulDetailArtikel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:text="@string/artikel_kesehatan"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ibBackArtikel"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/ivDetailArtikel"
                android:layout_width="500dp"
                android:layout_height="250dp"
                android:layout_marginTop="30dp"
                android:contentDescription="@string/gambar"
                app:layout_constraintBottom_toTopOf="@+id/tvKontenDetailArtikel"
                app:layout_constraintCircleAngle="100"
                app:layout_constraintCircleRadius="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvJudulDetailArtikel"
                app:layout_constraintVertical_bias="0.092"
                tools:src="@tools:sample/backgrounds/scenic" />

            <TextView
                android:id="@+id/tvTitleDetailArtikel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="50dp"
                android:layout_marginRight="16dp"
                android:gravity="center"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ivDetailArtikel"
                tools:text="Judul" />

            <TextView
                android:id="@+id/tvKontenDetailArtikel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvTitleDetailArtikel"
                app:layout_constraintWidth_default="wrap"
                tools:text="@tools:sample/lorem/random" />

        </androidx.constraintlayout.widget.ConstraintLayout>
        <!--                android:justificationMode="inter_word"-->
    </androidx.core.widget.NestedScrollView>
    <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:labelVisibilityMode="labeled"
            android:background="@android:color/white"
            app:menu="@menu/navbar_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>